<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kaijun.dynamicresource.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txtvtieude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tieu_de"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="left">

            <TextView
                android:id="@+id/txtvmang"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/nha_mang"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/txtmang"
                android:text="@string/get_nha_mang"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"

            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="left">

            <TextView
                android:id="@+id/txtvngonngu"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/ngon_ngu"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/txtngonngu"
                android:text="@string/get_ngon_ngu"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"

            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="left">

            <TextView
                android:id="@+id/txtvvung"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/vung"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtvung"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/get_vung"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
